--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </section>
   
-  <div class="second-conainer">
+  <div class="second-container">
     <div class="read">
       <h3><a href="https://www.grab.com/ph/about/">Read About Us</a></h2>
     </div>
@@ -62,7 +62,7 @@
 
     <div class="subscribe">
       <form method="post" id="form">
-        <input class="w3-input w3-border w3-round" type="email" id="email" style="width:30%" placeholder="email address">
+        <input class="w3-input w3-border w3-round" type="email" id="email" placeholder="email address">
         <input id="submit" type="submit" value="Subscribe to our newsletter" >
       </form>
     </div>
